attempt to fix unit test
git-svn-id: http://josm.openstreetmap.de/svn/trunk@9782 0c6e7542-c601-0410-84e7-c038aed88b3b